--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/ask-for.css" type="text/css">
   <link rel="stylesheet" href="css/our-history.css" type="text/css">
   <link rel="stylesheet" href="css/products.css" type="text/css">
-  <link rel="stylesheet" href="footer.css" type="text/css">
+  <link rel="stylesheet" href="css/footer.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -77,6 +77,7 @@
         <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
         <figure>
           <img src="../assets/img/Imagen_principal.png" alt="" />
+        </figure>
       </section>
       <section class="features">
         <h2>Features</h2>
@@ -149,7 +150,7 @@
           </div>
         </form>
       </section>
-       <section class="our-history">
+      <section class="our-history">
         <h2>Our history</h2>
         <div class="our-history-group">
           <div class="paragraph">
@@ -176,7 +177,7 @@
           </figure>
         </div>
       </section>
-    <section class="products">
+      <section class="products">
         <div class="products-parts product">
           <h3>PRODUCTS</h3>
           <ul>
@@ -229,31 +230,31 @@
           </ul>
         </div>
       </section>
-              <!--  <footer>
+      <footer>
         <div class="footer-socials">
           <figure>
             <a href="#" target="_blank">
-              <img class="twitter" src="../assets/img/twitter.png" alt="">
+              <img class="twitter" src="../assets/img/twitter.png" alt="twitter">
             </a>
           </figure>
           <figure>
             <a href="#" target="_blank">
-              <img class="face" src="../assets/img/face.png" alt="">
+              <img class="face" src="../assets/img/face.png" alt="facebook">
             </a>
           </figure>
           <figure>
             <a href="#" target="_blank">
-              <img class="linkedin" src="../assets/img/linkedin.png" alt="">
+              <img class="linkedin" src="../assets/img/linkedin.png" alt="linkedin">
             </a>
           </figure>
           <figure>
             <a href="#" target="_blank">
-              <img class="instagram" src="../assets/img/instagram.png" alt="">
+              <img class="instagram" src="../assets/img/instagram.png" alt="instagram">
             </a>
           </figure>
           <figure>
             <a href="#" target="_blank">
-              <img class="github" src="../assets/img/github.png" alt="">
+              <img class="github" src="../assets/img/github.png" alt="github">
             </a>
           </figure>
         </div>
@@ -262,9 +263,9 @@
           <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
           <P>All rights reserved.</P>
         </div>
-      </footer> 
-    </main> 
-  </div>-->
+      </footer>
+    </main>
+  </div>
 </body>
 
 </html>
