BaSP-W04-2020: fix aside section and make some change in others components

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/body.css" type="text/css">
   <link rel="stylesheet" href="css/header.css" type="text/css">
-  <link rel="stylesheet" href="sidebar.css" type="text/css">
+  <link rel="stylesheet" href="css/sidebar.css" type="text/css">
   <link rel="stylesheet" href="css/trackgenix.css" type="text/css">
   <link rel="stylesheet" href="css/features.css" type="text/css">
   <link rel="stylesheet" href="css/why-use.css" type="text/css">
@@ -31,41 +31,41 @@
     </div>
   </header>
   <div class="container">
-    <!--  <aside>
-     <h2 class="nav-menu">Menu</h2>
-     <ul class="nav-menu-ul">
-       <li>
-         <a href="#"> Home</a>
-       </li>
-       <li>
-         <a href="#">SignUp</a>
-       </li>
-       <li>
-         <a href="#">Login</a>
-       </li>
-     </ul>
-     <h2 class="nav-contact">Contact</h2>
-     <ul class="nav-contact-ul">
-       <li>
-         <figure>
-           <img src="../assets/img/mail.png" alt="" />
-         </figure>
-         <a href="#" target="_blank">trackgenix@gmail.com</a>
-       </li>
-       <li>
-         <figure>
-           <img src="../assets/img/phone.png" alt="" />
-         </figure>
-         <a href="#" target="_blank">(+54) 4545-9999</a>
-       </li>
-       <li id="nav-contact-address">
-         <figure>
-           <img src="../assets/img/adress.png" alt="" />
-         </figure>
-         <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-       </li>
-     </ul>
-   </aside> -->
+    <aside>
+      <h2 class="nav-menu">Menu</h2>
+      <ul class="nav-menu-ul">
+        <li>
+          <a href="#"> Home</a>
+        </li>
+        <li>
+          <a href="#">SignUp</a>
+        </li>
+        <li>
+          <a href="#">Login</a>
+        </li>
+      </ul>
+      <h2 class="nav-contact">Contact</h2>
+      <ul class="nav-contact-ul">
+        <li>
+          <figure>
+            <img src="../assets/img/mail.png" alt="mail"/>
+          </figure>
+          <a href="#" target="_blank">trackgenix@gmail.com</a>
+        </li>
+        <li>
+          <figure>
+            <img src="../assets/img/phone.png" alt="phone" />
+          </figure>
+          <a href="#" target="_blank">(+54) 4545-9999</a>
+        </li>
+        <li id="nav-contact-address">
+          <figure>
+            <img src="../assets/img/adress.png" alt="addres" />
+          </figure>
+          <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+        </li>
+      </ul>
+    </aside>
     <main>
       <section class="trackgenix">
         <h1>trackgenix</h1>
